# ntfy-idmon-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: main.rs
